# trader_new

./: .env.example  .gitignore  README.md  docker-compose.yml  render.yaml
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260314_0001_initial.py  20260315_0002_funding_basis_research.py  20260328_0003_feature_layer.py  20260328_0004_validation_runs.py  20260328_0005_validation_run_progress.py  20260329_0006_pattern_scan_runs.py  20260329_0007_scheduled_task_states.py  20260330_0008_short_side_enum.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: dependencies.py  errors.py  router.py
apps/api/app/benchmarks/: __init__.py  category_strategy_suite.py
apps/api/app/core/: config.py  logging.py
apps/api/app/db/: __init__.py  base.py  seed.py  session.py
apps/api/app/engines/: __init__.py  backtest_engine.py  base.py  market_data_engine.py  paper_engine.py  performance_engine.py  risk_engine.py  strategy_engine.py
apps/api/app/integrations/: __init__.py  base.py  binance_common.py
apps/api/app/models/: __init__.py  backtest.py  base.py  enums.py  funding_basis.py  market_data.py  paper.py  reference.py  strategy.py  system.py
apps/api/app/repositories/: __init__.py  backtest_repository.py  base.py  candle_repository.py  feature_repository.py  funding_basis_repository.py  log_repository.py  order_repository.py  paper_account_repository.py  pattern_scan_run_repository.py  position_repository.py  (+7 more)
apps/api/trader_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+189 files in other folders)
